<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tipso</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_acceuil">Acceuil</string>
    <string name="title_acceuil">Tips</string>
    <string name="add_tips">Add New Tips</string>
    <string name="search_icon">search_icon</string>
    <string name="text_search">Search</string>
    <string name="ListeCategorie">List of categorie</string>
    <string name="icon_home">icon home</string>
    <string name="title_activity_addTipso">Add Tipso</string>
    
    <string name="profile">Profil</string>
    <string name="options">Options</string>
    <string name="cover">cover</string>
    <string name="name">Hadrich Hatem</string>
    <string name="tips">Tips</string>
    <string name="about">About</string>
    <string name="info">About</string>
    <string name="friend">Friends</string>
    <string name="friends_user">Friends</string>

</resources>
